{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "View",
            "id": "ee5a1180-723c-43c6-9f2e-2add25f0f344",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "4244a9b4-e83e-4636-b172-bdd85e599a9a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "8ba0dce3-eac1-45e3-af82-9f9b9a0c471c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7899cae7-2251-4a7f-8ff9-22dfba6534fd",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "882d77fd-ad33-4ec4-8177-a6f2f01d8233",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c86875c8-6092-486d-9fe6-1f05a13e4d46",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "018166a3-6328-47a8-85ad-5c093b02faed",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Sorcery",
            "id": "571d3660-a69b-49e3-8101-45418f8ad1d9",
            "actions": [
                {
                    "name": "ToggleCraftingMode",
                    "type": "Button",
                    "id": "1d59879a-61c1-4899-94b5-b5e1316047d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cast",
                    "type": "Button",
                    "id": "570ac32d-878a-4d5e-9737-6acaedecb1d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "639ae13a-f83e-4bdc-a915-2644e17e5c53",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleCraftingMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5d4d2fb-30bf-479c-a5bf-0074d1013f28",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleCraftingMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1eccd5e8-624a-484f-bcbd-be4d38a71e43",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cast",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "bae2d1af-0a04-4db8-8f8b-a45c8eec0606",
            "actions": [
                {
                    "name": "NextLevel",
                    "type": "Button",
                    "id": "7dc186b5-7ec5-4dcc-b347-033d6e11eaf4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PreviousLevel",
                    "type": "Button",
                    "id": "0a6fe310-475b-45bd-9238-114f7f043323",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RestartLevel",
                    "type": "Button",
                    "id": "2a9655e5-ceb9-4276-a8f4-36fe7bb84a63",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fac163ff-b56a-4737-91f8-03a2ce611cf3",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ddf7c5f3-3350-454c-856d-eafee85965dd",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "651b7b81-e4f8-4263-8ab8-71fbcc32b12e",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RestartLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}